fix: overflow page

--- a/pages/fix/common-issues/common-issues.scss
+++ b/pages/fix/common-issues/common-issues.scss
@@ -1,18 +1,16 @@
 page {
   background-color: #F5F5F5;
-  width: 100vw;
-  min-height: 100vh;
 }
 
 .main {
-  margin: 100rpx 25rpx;
+  margin: 0 25rpx;
   padding: 25rpx;
 
   background: #FFFFFF;
   box-shadow: 0px 10rpx 10rpx rgba(0, 0, 0, 0.25);
   border-radius: 25rpx;
 
-  transform: translateY(-300rpx);
+  transform: translateY(-200rpx);
 
   &::before {
     content: '问题归属类型：产品类型-产品型号';
